comments updated